--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 arch:
    - amd64
    - ppc64le
+before_script:
+   - sudo apt install -y ansible   
 script:
    - cp awx/settings/local_settings.py.docker_compose awx/settings/local_settings.py
    - make docker-compose-build
