Travis-ci support for ppc64le along with amd64 for ui-devel

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ before_script:
    - sudo apt-get install -y ansible   
 script:
    - cp awx/settings/local_settings.py.docker_compose awx/settings/local_settings.py
-   - make docker-compose-build
+     #   - make docker-compose-build
+   - make ui-devel
